--- a/FizzBuzz/CMakeLists.txt
+++ b/FizzBuzz/CMakeLists.txt
@@ -1,11 +1,10 @@
 
+include (../Modules/Catch2.cmake)
+
 add_executable (
-  FizzBuzz
-  main.cpp
-  game.h
-  range.h
+  FizzBuzz main.cpp game.h range.h
   )
 
 target_link_libraries (
-  FizzBuzz PRIVATE Catch
+  FizzBuzz PRIVATE Catch2
   )
