Work in progress

--- a/ChristmasTree/CMakeLists.txt
+++ b/ChristmasTree/CMakeLists.txt
@@ -2,7 +2,7 @@
 include (../Modules/gtest.cmake)
 
 add_executable (
-  ChristmasTree main.cpp
+  ChristmasTree main.cpp catalog.h image.h
   )
 
 target_link_libraries (
